[gd_scene load_steps=6 format=3 uid="uid://duc8wuc7nnljh"]

[ext_resource type="Script" uid="uid://boaufraey3ovc" path="res://scripts/GameCreator.gd" id="1_13amr"]
[ext_resource type="Shader" uid="uid://dnp31fktax2eu" path="res://shaders/background.gdshader" id="2_lcp4n"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8h8e4"]
shader = ExtResource("2_lcp4n")
shader_parameter/polar_coordinates = false
shader_parameter/polar_center = Vector2(0.5, 0.5)
shader_parameter/polar_zoom = 1.0
shader_parameter/polar_repeat = 3.0
shader_parameter/spin_rotation = 2.0
shader_parameter/spin_speed = 7.0
shader_parameter/offset = Vector2(0, 0)
shader_parameter/colour_1 = Color(0.870588, 0.266667, 0.231373, 1)
shader_parameter/colour_2 = Color(0, 0.419608, 0.705882, 1)
shader_parameter/colour_3 = Color(0.0862745, 0.137255, 0.145098, 1)
shader_parameter/contrast = 3.5
shader_parameter/lighting = 0.3
shader_parameter/spin_amount = 0.25
shader_parameter/pixel_filter = 740.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lcp4n"]
bg_color = Color(0.352941, 0.352941, 0.352941, 0.572549)

[sub_resource type="LabelSettings" id="LabelSettings_312jr"]
font_size = 48

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_13amr")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="background" type="ColorRect" parent="Control"]
modulate = Color(0.641934, 0.641934, 0.641934, 1)
material = SubResource("ShaderMaterial_8h8e4")
layout_mode = 1
anchors_preset = -1
anchor_right = 48.0
anchor_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 626.0
offset_top = 30.0
offset_right = 1283.0
offset_bottom = 1028.0
theme_override_styles/panel = SubResource("StyleBoxFlat_lcp4n")

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 112.0
offset_top = 35.0
offset_right = 546.0
offset_bottom = 102.0
text = "Добавление игры"
label_settings = SubResource("LabelSettings_312jr")

[node name="OptionButton" type="OptionButton" parent="Panel"]
layout_mode = 0
offset_left = 167.0
offset_top = 699.0
offset_right = 507.0
offset_bottom = 764.0

[node name="Name" type="LineEdit" parent="Panel"]
layout_mode = 0
offset_left = 167.0
offset_top = 144.0
offset_right = 507.0
offset_bottom = 210.0
theme_override_font_sizes/font_size = 32
placeholder_text = "Название игры..."
max_length = 50

[node name="Front" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 167.0
offset_top = 254.0
offset_right = 507.0
offset_bottom = 320.0
theme_override_font_sizes/font_size = 32
text = "Передняя"

[node name="Back" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 167.0
offset_top = 352.0
offset_right = 507.0
offset_bottom = 418.0
theme_override_font_sizes/font_size = 32
text = "Задняя"

[node name="Spine" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 167.0
offset_top = 454.0
offset_right = 507.0
offset_bottom = 520.0
theme_override_font_sizes/font_size = 32
text = "Боковая"

[node name="Executable" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 167.0
offset_top = 561.0
offset_right = 507.0
offset_bottom = 659.0
theme_override_font_sizes/font_size = 32
text = "Исполняемый
Файл"

[node name="DownloadCovers" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 167.0
offset_top = 800.0
offset_right = 507.0
offset_bottom = 866.0
theme_override_font_sizes/font_size = 32
text = "Скачать обложки"

[node name="Done" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 167.0
offset_top = 896.0
offset_right = 507.0
offset_bottom = 962.0
theme_override_font_sizes/font_size = 32
text = "Готово"

[node name="InstructionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 19.0
offset_top = -50.0
offset_right = 550.0
offset_bottom = -16.0
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "Нажмите Esc чтобы вернуться в глав. меню"
horizontal_alignment = 1

[connection signal="pressed" from="Panel/Front" to="." method="_on_front_pressed"]
[connection signal="pressed" from="Panel/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Panel/Spine" to="." method="_on_spine_pressed"]
[connection signal="pressed" from="Panel/Executable" to="." method="_on_executable_pressed"]
[connection signal="pressed" from="Panel/DownloadCovers" to="." method="_on_download_covers_pressed"]
[connection signal="pressed" from="Panel/Done" to="." method="_on_done_pressed"]
